[project]
name = "cronboard"
version = "1.0.0"
description = "Terminal-based cron job manager built with Textual"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.79.0",
    "croniter>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
cronboard = "cronboard.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
